--- a/app/src/main/res/layout/activity_resume.xml
+++ b/app/src/main/res/layout/activity_resume.xml
@@ -228,6 +228,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="150dp"
                             android:src="@drawable/job_holder"
+                            android:padding="20dp"
                             android:visibility="visible"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -267,6 +268,7 @@
                             android:layout_height="150dp"
                             android:src="@drawable/job_holder"
                             android:visibility="visible"
+                            android:padding="20dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/jobOffersSeparator"
@@ -307,6 +309,7 @@
                             android:layout_height="150dp"
                             android:src="@drawable/job_holder"
                             android:visibility="visible"
+                            android:padding="20dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/jobOffersSeparator"
