--- a/app/src/main/res/layout/applicants_item_layout.xml
+++ b/app/src/main/res/layout/applicants_item_layout.xml
@@ -27,14 +27,17 @@
         <TextView
             android:id="@+id/name"
             style="@style/AppTheme.TextAppearance"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:lineSpacingExtra="0dp"
             android:text="Abdulrahman Baqdounes"
             android:textColor="@color/black"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@id/statusSpinner"
             app:layout_constraintStart_toEndOf="@id/image"
             app:layout_constraintTop_toTopOf="@id/image" />
         
@@ -65,6 +68,20 @@
             android:textStyle="italic"
             app:layout_constraintStart_toEndOf="@id/image"
             app:layout_constraintTop_toBottomOf="@id/positionTitle" />
+
+        <TextView
+            android:id="@+id/phoneNumber"
+            style="@style/AppTheme.TextAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:lineSpacingExtra="0dp"
+            android:text="+963 933074900"
+            android:textColor="@color/grayLightTextColor"
+            android:textStyle="italic"
+            app:layout_constraintStart_toEndOf="@id/image"
+            app:layout_constraintTop_toBottomOf="@id/location" />
     
     
         <TextView
@@ -85,12 +102,14 @@
     
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/statusSpinner"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:maxWidth="100dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/location" />
+            app:layout_constraintTop_toTopOf="@+id/name" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
