--- a/app/src/main/res/layout/business_guide_details_layout.xml
+++ b/app/src/main/res/layout/business_guide_details_layout.xml
@@ -130,6 +130,7 @@
                             android:paddingStart="0dp"
                             android:paddingLeft="0dp"
                             android:paddingTop="16dp"
+                            android:paddingBottom="8dp"
                             android:paddingEnd="@dimen/md_padding"
                             android:paddingRight="@dimen/md_padding"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -207,7 +208,6 @@
                                     android:id="@+id/categoryLayout"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_below="@id/locationLayout"
                                     android:layout_marginStart="@dimen/md_margin"
                                     android:layout_marginLeft="@dimen/md_margin"
                                     android:layout_marginTop="@dimen/md_margin"
@@ -228,6 +228,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center"
+                                        android:layout_marginTop="-4dp"
                                         android:text="Medicine"
                                         android:textAlignment="gravity"
                                         android:textColor="@color/white"
@@ -260,6 +261,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="start"
+                                        android:layout_marginTop="-4dp"
                                         android:text="Eye"
                                         android:textAlignment="gravity"
                                         android:textColor="@color/white"
@@ -292,6 +294,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center"
+                                        android:layout_marginTop="-4dp"
                                         android:text="Damacus"
                                         android:textAlignment="gravity"
                                         android:textColor="@color/white"
@@ -324,6 +327,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center"
                                         android:text="Al-Mazeh"
+                                        android:layout_marginTop="-4dp"
                                         android:textAlignment="gravity"
                                         android:textColor="@color/white"
                                         android:textStyle="bold" />
@@ -494,22 +498,21 @@
                                 android:id="@+id/jobsPlaceHolder"
                                 android:layout_width="match_parent"
                                 android:layout_height="150dp"
+                                android:padding="20dp"
                                 android:src="@drawable/employee"
-                                
                                 app:layout_constraintTop_toBottomOf="@+id/jobsRecycler" />
-                            
+
+
                             <android.support.v7.widget.RecyclerView
                                 android:id="@+id/jobsRecycler"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_width="300dp"
+                                android:layout_height="200dp"
                                 android:layout_alignParentTop="true"
-                                android:visibility="gone"
-                                
+                                android:visibility="invisible"
                                 app:layout_constraintTop_toBottomOf="@+id/jobOffersSeparator"
                                 tools:itemCount="10"
                                 tools:listitem="@layout/job_search_item_layout" />
-                            
-                            
+
                             <android.support.constraint.ConstraintLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
