--- a/app/src/main/res/layout/activity_job_details.xml
+++ b/app/src/main/res/layout/activity_job_details.xml
@@ -18,29 +18,30 @@
         
         <ImageView
             android:id="@+id/applicantsBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginEnd="40dp"
             android:layout_marginRight="40dp"
             android:src="@mipmap/ic_profile_24dp"
             app:layout_constraintBottom_toBottomOf="@id/editBtn"
             app:layout_constraintEnd_toStartOf="@id/editBtn"
             app:layout_constraintTop_toTopOf="@id/editBtn" />
-        
-        
+    
+    
+
         <TextView
             android:id="@+id/applicantsNumber"
             style="@style/AppTheme.TextAppearance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
             
-            android:background="@drawable/red_circle"
+            android:background="@drawable/badge_bg_with_shadow"
             android:gravity="center"
-            android:padding="5dp"
+         
             android:text="10"
             
             android:textColor="@color/white"
-            android:textSize="8sp"
+            android:textSize="5sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/applicantsBtn"
             app:layout_constraintTop_toTopOf="@id/applicantsBtn" />
@@ -233,6 +234,13 @@
                 android:textStyle="bold" />
         </android.support.v7.widget.CardView>
         
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".7" />
+        
         <TextView
             android:id="@+id/descriptionText"
             style="@style/AppTheme.TextAppearance"
@@ -248,6 +256,7 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@id/guideline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/date" />
         
