--- a/app/src/main/res/layout/applicants_item_layout.xml
+++ b/app/src/main/res/layout/applicants_item_layout.xml
@@ -21,8 +21,8 @@
             android:layout_marginTop="12dp"
             android:scaleType="centerCrop"
             android:src="@drawable/job_holder"
-            app:layout_constraintStart_toStartOf="@+id/closeBtn"
-            app:layout_constraintTop_toBottomOf="@+id/closeBtn" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         
         <TextView
             android:id="@+id/name"
@@ -31,12 +31,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:lineSpacingExtra="0dp"
             android:text="Abdulrahman Baqdounes"
             android:textColor="@color/black"
             android:textStyle="bold"
+            android:gravity="start"
             app:layout_constraintEnd_toStartOf="@id/statusSpinner"
             app:layout_constraintStart_toEndOf="@id/image"
             app:layout_constraintTop_toTopOf="@id/image" />
