--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -432,6 +432,20 @@
                             android:textColor="@color/profileHeaderColor"
                             android:textStyle="bold"
                             app:layout_constraintTop_toBottomOf="@+id/myBusinessStateLayout" />
+                        <android.support.v7.widget.AppCompatImageButton
+                            android:id="@+id/JobsAddLink"
+                            style="@style/AppTheme.TextAppearance"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/transparent"
+                            android:padding="@dimen/md_margin"
+                            android:text="@string/Add"
+                            android:textColor="@color/profileHeaderColor"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/myBusinessStateLayout"
+                            app:srcCompat="@drawable/ic_add_dark_24dp" />
                         
                         
                         <View
