https://trello.com/c/ojuIU3Rn/136-feedback-3-12-2019

--- a/app/src/main/res/layout/job_search_item_layout.xml
+++ b/app/src/main/res/layout/job_search_item_layout.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
+            android:maxWidth="150dp"
             android:includeFontPadding="false"
             android:lineSpacingExtra="0dp"
             android:text="Senior Android Developer"
@@ -48,6 +49,7 @@
             android:layout_marginLeft="10dp"
             android:includeFontPadding="false"
             android:lineSpacingExtra="0dp"
+            android:maxWidth="150dp"
             android:text="Open System Technology"
             android:textColor="@color/grayDarkTextColor"
             android:textStyle="bold"
@@ -64,6 +66,7 @@
             android:includeFontPadding="false"
             android:lineSpacingExtra="0dp"
             android:text="Damascus, Syria"
+            android:maxWidth="150dp"
             android:textColor="@color/grayLightTextColor"
             android:textStyle="italic"
             app:layout_constraintStart_toEndOf="@id/image"
