--- a/app/src/main/res/layout/activity_job_details.xml
+++ b/app/src/main/res/layout/activity_job_details.xml
@@ -233,13 +233,7 @@
                 android:textSize="12sp"
                 android:textStyle="bold" />
         </android.support.v7.widget.CardView>
-        
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent=".7" />
+     
         
         <TextView
             android:id="@+id/descriptionText"
@@ -249,14 +243,13 @@
             android:layout_gravity="start"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="35dp"
             android:layout_weight="1"
             android:text="@string/Description"
             android:textColor="@color/grayDarkTextColor"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:visibility="gone"
-            app:layout_constraintEnd_toStartOf="@id/guideline"
+            android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/date" />
         
@@ -285,7 +278,7 @@
             android:textColor="@color/grayDarkTextColor"
             android:textSize="12sp"
             android:textStyle="bold"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/headerLine1" />
         
