--- a/app/src/main/res/layout/product_item_layout.xml
+++ b/app/src/main/res/layout/product_item_layout.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/zero"
     android:padding="@dimen/zero">
-
+    
     <com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@drawable/transparent_radius_bg"
         android:padding="@dimen/zero"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:ms9_shadowElevation="@dimen/lg_elevation">
-
+        
         <android.support.constraint.ConstraintLayout
             style="@style/commonNinePatchShadowItemViewStyle"
             android:layout_width="match_parent"
@@ -20,7 +22,7 @@
             android:layout_margin="@dimen/md_margin"
             android:background="@drawable/white_radius_sm_bg"
             android:padding="@dimen/zero">
-
+            
             <ImageView
                 android:id="@+id/productImage"
                 android:layout_width="@dimen/product_image_width"
@@ -29,58 +31,69 @@
                 android:background="@color/transparent"
                 android:contentDescription="@string/contentDescription"
                 android:src="@mipmap/ic_launcher"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            
             <android.support.constraint.ConstraintLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
                 android:padding="@dimen/zero"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/productImage">
-
+                
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/productImage"
+                app:layout_constraintTop_toTopOf="parent">
+                
                 <ImageView
                     android:id="@+id/editProduct"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:contentDescription="@string/contentDescription"
                     android:src="@drawable/ic_edit_dark_24dp"
-                    app:layout_constraintEnd_toEndOf="parent" />
-
+                    app:layout_constraintStart_toEndOf="@id/productTitle"
+                    app:layout_constraintTop_toTopOf="parent" />
+                
                 <TextView
                     android:id="@+id/productTitle"
                     style="@style/AppTheme.TextAppearance"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
                     android:shadowColor="@color/lightGray"
                     android:shadowRadius="@integer/textShadow"
+                    android:maxWidth="100dp"
+                    android:minWidth="50dp"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/editProduct"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toLeftOf="@+id/editProduct"
-                    app:layout_constraintStart_toStartOf="parent" />
-
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+                
                 <TextView
                     android:id="@+id/productDetails"
                     style="@style/AppTheme.TextAppearanceSmall"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:gravity="start"
                     android:maxLines="6"
+                    android:maxWidth="150dp"
+                    android:minWidth="100dp"
                     android:shadowColor="@color/lightGray"
                     android:shadowRadius="@integer/textShadow"
                     android:textAlignment="gravity"
                     android:textColor="@color/grayDarkTextColor"
                     android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/productTitle" />
-
+            
             </android.support.constraint.ConstraintLayout>
-
-
+        
+        
         </android.support.constraint.ConstraintLayout>
-
+    
     </com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView>
     <!--</LinearLayout>-->
 
