Many issues fixed. Market and products added.

--- a/app/src/main/res/layout/background_primary_layout.xml
+++ b/app/src/main/res/layout/background_primary_layout.xml
@@ -10,5 +10,12 @@
         android:background="@color/colorPrimary"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.7" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.3" />
 
 </android.support.constraint.ConstraintLayout>
