--- a/app/src/main/res/layout/post_details_layout.xml
+++ b/app/src/main/res/layout/post_details_layout.xml
@@ -40,7 +40,7 @@
                         android:id="@+id/backBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="25dp"
-     
+                        
                         android:layout_alignParentStart="true"
                         android:layout_centerInParent="true"
                         android:elevation="10dp"
@@ -55,7 +55,7 @@
                         android:layout_centerInParent="true"
                         android:elevation="10dp"
                         android:src="@drawable/ic_next_volume_24dp" />
-
+                    
                     <com.brainsocket.mainlibrary.SupportViews.ViewPagers.RtlViewPager
                         android:id="@+id/mediaViewPager"
                         android:layout_width="match_parent"
@@ -83,19 +83,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
-            app:behavior_overlapTop="60dp"
+            
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
             <!--android:scrollbars="vertical"-->
             
-            <android.support.v7.widget.CardView
+            <LinearLayout
                 android:id="@+id/flexible.example.cardview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="4dp"
-                app:cardElevation="15dp"
-                app:cardUseCompatPadding="true"
+                android:background="@color/colorPrimaryDark"
+                android:orientation="vertical"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar">
@@ -124,8 +124,7 @@
                             android:paddingStart="@dimen/zero"
                             android:paddingLeft="@dimen/zero"
                             android:paddingTop="@dimen/md_padding"
-                            android:paddingEnd="@dimen/md_padding"
-                            android:paddingRight="@dimen/md_padding"
+                            
                             android:paddingBottom="@dimen/lg_padding">
                             
                             <android.support.v7.widget.AppCompatTextView
@@ -171,6 +170,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentEnd="true"
                                     android:layout_alignParentRight="true"
+                                    android:layout_marginEnd="8dp"
                                     android:orientation="vertical">
                                     
                                     <android.support.v7.widget.AppCompatTextView
@@ -292,6 +292,7 @@
                                 </LinearLayout>
                                 
                                 <LinearLayout
+                                    android:id="@+id/contactLayout"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_below="@id/cityLayout"
@@ -300,6 +301,7 @@
                                     android:layout_marginStart="@dimen/md_margin"
                                     android:layout_marginLeft="@dimen/md_margin"
                                     android:layout_marginTop="@dimen/md_margin"
+                                    android:layout_marginEnd="8dp"
                                     android:orientation="vertical">
                                     
                                     
@@ -319,8 +321,33 @@
                                 
                                 </LinearLayout>
                             
+                            
                             </RelativeLayout>
-                        
+                            
+                            <TextView
+                                android:id="@+id/price"
+                                style="@style/AppTheme.TextAppearance"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_alignParentRight="true"
+                                android:layout_gravity="center_vertical"
+                                android:background="@color/colorPrimaryDark"
+                                android:gravity="center"
+                                android:maxLines="1"
+                                android:paddingStart="@dimen/md_padding"
+                                android:paddingLeft="@dimen/md_padding"
+                                android:paddingTop="@dimen/md_padding"
+                                android:paddingEnd="@dimen/md_padding"
+                                android:paddingRight="@dimen/md_padding"
+                                android:paddingBottom="@dimen/md_padding"
+                                android:text="Price"
+                                android:textAlignment="gravity"
+                                android:textColor="@color/white"
+                                android:textSize="12sp"
+                                android:visibility="gone"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
                         </android.support.constraint.ConstraintLayout>
                         
                         <android.support.constraint.ConstraintLayout
@@ -412,7 +439,7 @@
                 
                 </com.brainsocket.mainlibrary.Views.Stateslayoutview>
             
-            </android.support.v7.widget.CardView>
+            </LinearLayout>
         
         </android.support.v4.widget.NestedScrollView>
     
@@ -424,6 +451,15 @@
         layout="@layout/toolbar_post_details_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    
+    <ImageView
+        android:id="@+id/editProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        
+        />
+
 
 </RelativeLayout>
 
