--- a/app/src/main/res/layout/post_item_fixed_layout.xml
+++ b/app/src/main/res/layout/post_item_fixed_layout.xml
@@ -20,7 +20,7 @@
             android:layout_height="match_parent">
 
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/post_Image"
+                android:id="@+id/product_Image"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:adjustViewBounds="true"
@@ -36,8 +36,8 @@
                 android:id="@+id/tagContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/post_Image"
-                app:layout_constraintTop_toBottomOf="@+id/post_Image">
+                app:layout_constraintBottom_toBottomOf="@+id/product_Image"
+                app:layout_constraintTop_toBottomOf="@+id/product_Image">
 
                 <View
                     android:layout_width="match_parent"
@@ -46,7 +46,7 @@
                     android:background="@color/lightGray" />
 
                 <TextView
-                    android:id="@+id/post_Tag"
+                    android:id="@+id/product_Tag"
                     style="@style/AppTheme.TextAppearance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -73,7 +73,7 @@
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/post_Title"
+                android:id="@+id/product_Title"
                 style="@style/AppTheme.TextAppearance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -89,15 +89,15 @@
                 app:layout_constraintTop_toBottomOf="@+id/tagContainer" />
 
             <LinearLayout
-                android:id="@+id/post_Details_Container"
+                android:id="@+id/product_Details_Container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@+id/post_Title">
+                app:layout_constraintTop_toBottomOf="@+id/product_Title">
 
                 <TextView
-                    android:id="@+id/post_details"
+                    android:id="@+id/product_details"
                     style="@style/AppTheme.TextAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -125,12 +125,12 @@
                 android:visibility="gone">
 
                 <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/post_city"
+                    android:id="@+id/product_city"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
                 <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/post_area"
+                    android:id="@+id/product_area"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
