--- a/app/src/main/res/layout/post_item_layout.xml
+++ b/app/src/main/res/layout/post_item_layout.xml
@@ -47,7 +47,7 @@
             android:padding="@dimen/zero">
 
             <ImageView
-                android:id="@+id/post_Image"
+                android:id="@+id/product_Image"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
@@ -63,8 +63,8 @@
                 android:id="@+id/tagContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/post_Image"
-                app:layout_constraintTop_toBottomOf="@+id/post_Image">
+                app:layout_constraintBottom_toBottomOf="@+id/product_Image"
+                app:layout_constraintTop_toBottomOf="@+id/product_Image">
 
                 <View
                     android:layout_width="match_parent"
@@ -73,7 +73,7 @@
                     android:background="@color/lightGray" />
 
                 <TextView
-                    android:id="@+id/post_Tag"
+                    android:id="@+id/product_Tag"
                     style="@style/AppTheme.TextAppearance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -108,7 +108,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tagContainer">
 
                 <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/post_city"
+                    android:id="@+id/product_city"
                     style="@style/AppTheme.TextAppearance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -122,7 +122,7 @@
                     android:layout_margin="@dimen/zero"/>
 
                 <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/post_area"
+                    android:id="@+id/product_area"
                     style="@style/AppTheme.TextAppearance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -145,7 +145,7 @@
                 app:layout_constraintWidth_percent="0.75" />
 
             <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/post_Title"
+                android:id="@+id/product_Title"
                 style="@style/AppTheme.TextAppearance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -158,7 +158,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/post_separator" />
 
             <TextView
-                android:id="@+id/post_details"
+                android:id="@+id/product_details"
                 style="@style/AppTheme.TextAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
