--- a/mainlibrary/src/main/res/values/colors.xml
+++ b/mainlibrary/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="si_default_text_color_selected">#FF00FF</color>
     <color name="si_default_indicator_bg">#ee9999</color>
 
+    <color name="blue">#1a4cb6</color>
     <color name="red">#F44336</color>
 
 </resources>
